LE-39 Class to delete unpublished inactive descriptions